--- a/home.html
+++ b/home.html
@@ -7,8 +7,11 @@
          if(navigator.userAgent.toLowerCase().indexOf("android") > -1){
              window.location.href = 'https://itunes.apple.com/in/app/beautiful-photos/id1111832526?mt=8';
          }
-         if(navigator.userAgent.toLowerCase().indexOf("iphone") > -1){
+         else if(navigator.userAgent.toLowerCase().indexOf("iphone") > -1){
              window.location.href = 'https://itunes.apple.com/in/app/beautiful-photos/id1111832526?mt=8';
+         }
+         else{
+         	window.location.href = 'welcome.html';
          }
         });
 </script>
