--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 <script>
         $(document).ready(function (){
          if(navigator.userAgent.toLowerCase().indexOf("android") > -1){
-             window.location.href = 'https://itunes.apple.com/in/app/beautiful-photos/id1111832526?mt=8';
+             window.location.href = 'https://play.google.com/store/apps/details?id=com.bitjini.vzcards';
          }
          else if(navigator.userAgent.toLowerCase().indexOf("iphone") > -1){
              window.location.href = 'https://itunes.apple.com/in/app/beautiful-photos/id1111832526?mt=8';
